[package]
authors = ["Team27"]
edition = "2021"
readme = "README.md"
name = "MSPM0L1306-HAL"
description = "HAL crate for TI MSPM0L130X microcontroller"
version = "0.1.0"
repository = "https://github.com/WKNick/mspm0l1306-hal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rtic = "1.1.4"
cortex-m = "0.7.7"
cortex-m-rt = "0.6.10"
mspm0l130x = { version = "0.1.5", features = ["rt"]}
cortex-m-semihosting = "0.5.0"
embedded-hal = "1.0.0"
paste = "1.0.14"